# frankentorch

./: .gitignore  .skill-loop-progress-TurquoisePine.md  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENTORCH_V1.md  Cargo.toml  EXECUTION_TODO_GRANULAR.md  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_PYTORCH_STRUCTURE.md  FEATURE_PARITY.md  FRANKENSQLITE_ADAPTATION_CROSSWALK.md  PARITY-COVERAGE.md  PLAN_TO_PORT_PYTORCH_TO_RUST.md  PROFILING-RESULTS.md  README.md
crates/ft-api/: Cargo.toml
crates/ft-api/benches/: cdist_bench.rs  fft_bench.rs  ops_bench.rs  pytorch_avg_pool1d_grad.py  pytorch_avg_pool2d_grad.py  pytorch_batch_norm2d_f32_grad.py  pytorch_conv3d_grad.py  pytorch_gauntlet_bench.rs  pytorch_linear_train.py  special_bench.rs
crates/ft-api/examples/: acosh_ab.rs  acosh_check.rs  act_f32_h2h.rs  act_gapfind_h2h.rs  act_parity.rs  activation_bwd_contrib_ab.rs  activation_h2h.rs  activation_sweep_h2h.rs  addmm_grad_h2h.rs  affine_grid_f32_h2h.rs  affine_grid_h2h.rs  argreduce_h2h.rs  argsort_only_h2h.rs  asym_dtype_sweep2_h2h.rs  asym_dtype_sweep_h2h.rs  avgpool1d_phase_timing.rs  avgpool_gp2_probe.rs  avgpool_gp_probe.rs  backward_extremes_probe.rs  batch_norm_f32_grad_ab.rs  batched_cond_rank_h2h.rs  batched_eig_h2h.rs  batched_eigh_api_h2h.rs  batched_eigh_f32_h2h.rs  batched_eigh_grad_h2h.rs  batched_eigvals_grad_h2h.rs  batched_eigvals_h2h.rs  batched_eigvalsh_api_h2h.rs  batched_eigvalsh_f32_h2h.rs  batched_f32_evq_h2h.rs  batched_f32_linalg_h2h.rs  batched_f32_svdderiv_h2h.rs  batched_inv_probe.rs  batched_lstsq_grad_h2h.rs  batched_lu_grad_h2h.rs  batched_matnorm_h2h.rs  batched_matrix_exp_h2h.rs  batched_matrix_norm_grad_h2h.rs  batched_qr_api_h2h.rs  batched_solve_probe.rs  (+293 more)
crates/ft-api/src/: lib.rs
crates/ft-api/tests/: cholesky_double_backward_parity.rs  complex_fft_autograd_parity.rs  grad_fd_audit.rs  inverse_logdet_double_backward_parity.rs  logsumexp_double_backward_parity.rs  op_guards_cod4.rs  solve_double_backward_parity.rs  triangular_solve_double_backward_parity.rs
crates/ft-autograd/: Cargo.toml
crates/ft-autograd/benches/: backward_bench.rs
crates/ft-autograd/examples/: grad_accumulate_owned_ab.rs
crates/ft-autograd/src/: lib.rs
crates/ft-conformance/: Cargo.toml
crates/ft-conformance/fixtures/: README.md  dispatch_key_cases.json  op_schema_cases.json  optimizer_cases.json  scalar_autograd_cases.json  smoke_case.json  tensor_binary_cases.json  tensor_conv_cases.json  tensor_fft_cases.json  tensor_meta_cases.json  tensor_pool_cases.json  tensor_random_cases.json  tensor_unary_cases.json
crates/ft-conformance/src/: lib.rs  perf_slo.rs
crates/ft-conformance/tests/: e2e_training.rs  pytorch_ldexp_conformance.rs  smoke.rs
crates/ft-data/: Cargo.toml
crates/ft-data/benches/: sampler_bench.rs
crates/ft-data/src/: lib.rs
crates/ft-dispatch/: Cargo.toml
crates/ft-dispatch/benches/: dispatch_bench.rs
crates/ft-dispatch/src/: lib.rs
crates/ft-kernel-cpu/: Cargo.toml
crates/ft-kernel-cpu/benches/: elementwise_bench.rs  gemm_bench.rs  linalg_bench.rs  softmax_bench.rs  topk_bench.rs  winograd_bench.rs
crates/ft-kernel-cpu/examples/: argext_cb.rs  argmax_time.rs  atan2_f32_ab.rs  banded_stage1_ab.rs  banded_tridiag_ab.rs  batched_eigh_probe.rs  broadcast_ab.rs  cholesky_golden.rs  col_dw_ab.rs  col_golden.rs  complex_cb_ab.rs  conv3d_probe.rs  ctp_probe.rs  cummax_dim_headtohead.rs  cumprod_backward_ab.rs  cumsum_backward_ab.rs  depthwise_conv3d_ab.rs  depthwise_conv_ab.rs  depthwise_conv_backward_ab.rs  depthwise_conv_backward_f32_ab.rs  eig_timing_probe.rs  eigh_golden.rs  eigh_replay_block_ab.rs  eigh_stage_profile_run.rs  eigvals_golden.rs  expand_ab.rs  gemm_golden.rs  gemm_microkernel_probe.rs  gemm_time.rs  idx_time.rs  inv_golden.rs  lu_f32_vs_f64_ab.rs  mha_permute_ab.rs  norm_dim_p_ab.rs  outer_ab.rs  qr_stage_split.rs  reduce_bcast_ab.rs  redux2_time.rs  scatter_add_ab.rs  sgemm_2d_ab.rs  (+10 more)
crates/ft-kernel-cpu/src/: lib.rs
crates/ft-nn/: Cargo.toml
crates/ft-nn/benches/: nn_bench.rs
crates/ft-nn/examples/: adaptive_logsoftmax_probe.rs
crates/ft-nn/src/: lib.rs
crates/ft-runtime/: Cargo.toml
crates/ft-runtime/src/: lib.rs
crates/ft-runtime/tests/: golden_runtime_evidence.rs
crates/ft-serialize/: Cargo.toml
crates/ft-serialize/benches/: serialize_bench.rs
crates/ft-serialize/src/: lib.rs
fuzz/: Cargo.toml
fuzz/corpus/ft_api_complex/: seed_4  seed_8
fuzz/corpus/ft_api_f32_pipeline/: seed_3x4  seed_5x5
fuzz/corpus/ft_api_index_put_backward/: seed_n4_m2  seed_n5_m3
fuzz/corpus/ft_api_linalg_solve/: seed_2x2_b1  seed_3x3_b2
fuzz/corpus/ft_api_ordering/: seed_5_topk3  seed_8_topk4_desc
fuzz/corpus/ft_api_pad_mode/: circular_zero_pad_seed  reflect_1d_seed  replicate_2d_seed
fuzz/corpus/ft_api_round_decimals/: rank0_extreme_seed  rank2_nonfinite_seed  rank3_small_tensor_seed
fuzz/corpus/ft_api_vector_calculus/: seed_orthogonal  seed_random
fuzz/corpus/ft_core_dense_view/: seed_2x3_to_6  seed_8x1x1_to_4x2
fuzz/fuzz_targets/: ft_api_complex.rs  ft_api_f32_pipeline.rs  ft_api_index_put_backward.rs  ft_api_ldexp.rs  ft_api_linalg_solve.rs  ft_api_ordering.rs  ft_api_pad_mode.rs  ft_api_round_decimals.rs  ft_api_vector_calculus.rs  ft_core_dense_view.rs  ft_core_sparse_tensors.rs  ft_core_tensor_meta.rs  ft_kernel_cpu_argmax.rs  ft_kernel_cpu_binary_elementwise.rs  ft_kernel_cpu_binary_math.rs  ft_kernel_cpu_blas_small.rs  ft_kernel_cpu_bmm.rs  ft_kernel_cpu_cat_stack.rs  ft_kernel_cpu_cumprod.rs  ft_kernel_cpu_cumsum.rs  ft_kernel_cpu_expand.rs  ft_kernel_cpu_gather.rs  ft_kernel_cpu_index_put.rs  ft_kernel_cpu_index_select.rs  ft_kernel_cpu_inv.rs  ft_kernel_cpu_lerp.rs  ft_kernel_cpu_masked_fill.rs  ft_kernel_cpu_masked_select.rs  ft_kernel_cpu_matmul.rs  ft_kernel_cpu_matmul_f32.rs  ft_kernel_cpu_misc_f32.rs  ft_kernel_cpu_narrow.rs  ft_kernel_cpu_nonzero.rs  ft_kernel_cpu_norm.rs  ft_kernel_cpu_predicates.rs  ft_kernel_cpu_reductions_f32.rs  ft_kernel_cpu_scatter.rs  ft_kernel_cpu_softmax.rs  ft_kernel_cpu_softmax_f32.rs  ft_kernel_cpu_sort.rs  (+5 more)
(+1328 files in other folders)
