[workspace]
resolver = "2"
members = [
  "crates/ft-core",
  "crates/ft-dispatch",
  "crates/ft-kernel-cpu",
  "crates/ft-autograd",
  "crates/ft-device",
  "crates/ft-serialize",
  "crates/ft-api",
  "crates/ft-conformance",
  "crates/ft-runtime",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
ft-core = { path = "crates/ft-core" }
ft-dispatch = { path = "crates/ft-dispatch" }
ft-kernel-cpu = { path = "crates/ft-kernel-cpu" }
ft-autograd = { path = "crates/ft-autograd" }
ft-device = { path = "crates/ft-device" }
ft-serialize = { path = "crates/ft-serialize" }
ft-api = { path = "crates/ft-api" }
ft-conformance = { path = "crates/ft-conformance" }
ft-runtime = { path = "crates/ft-runtime" }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

asupersync = { version = "0.1.1", default-features = false, features = ["test-internals"] }
ftui = { path = "/dp/frankentui/crates/ftui", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
