[package]
name = "frankentorch-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
ft-core = { path = "../crates/ft-core" }
ft-dispatch = { path = "../crates/ft-dispatch" }
ft-serialize = { path = "../crates/ft-serialize" }
libfuzzer-sys = "0.4.7"

[[bin]]
name = "ft_serialize_state_dict"
path = "fuzz_targets/ft_serialize_state_dict.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_serialize_safetensors"
path = "fuzz_targets/ft_serialize_safetensors.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_dispatch_schema_parser"
path = "fuzz_targets/ft_dispatch_schema_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_core_sparse_tensors"
path = "fuzz_targets/ft_core_sparse_tensors.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_serialize_checkpoint"
path = "fuzz_targets/ft_serialize_checkpoint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_serialize_raptorq_sidecar"
path = "fuzz_targets/ft_serialize_raptorq_sidecar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_core_tensor_meta"
path = "fuzz_targets/ft_core_tensor_meta.rs"
test = false
doc = false
bench = false

[workspace]
