[package]
name = "frankentorch-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
ft-api = { path = "../crates/ft-api" }
ft-core = { path = "../crates/ft-core" }
ft-dispatch = { path = "../crates/ft-dispatch" }
ft-kernel-cpu = { path = "../crates/ft-kernel-cpu" }
ft-serialize = { path = "../crates/ft-serialize" }
libfuzzer-sys = "0.4.7"

[[bin]]
name = "ft_serialize_state_dict"
path = "fuzz_targets/ft_serialize_state_dict.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_serialize_safetensors"
path = "fuzz_targets/ft_serialize_safetensors.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_dispatch_schema_parser"
path = "fuzz_targets/ft_dispatch_schema_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_core_sparse_tensors"
path = "fuzz_targets/ft_core_sparse_tensors.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_serialize_checkpoint"
path = "fuzz_targets/ft_serialize_checkpoint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_serialize_raptorq_sidecar"
path = "fuzz_targets/ft_serialize_raptorq_sidecar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_core_tensor_meta"
path = "fuzz_targets/ft_core_tensor_meta.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_core_dense_view"
path = "fuzz_targets/ft_core_dense_view.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_narrow"
path = "fuzz_targets/ft_kernel_cpu_narrow.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_expand"
path = "fuzz_targets/ft_kernel_cpu_expand.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_gather"
path = "fuzz_targets/ft_kernel_cpu_gather.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_scatter"
path = "fuzz_targets/ft_kernel_cpu_scatter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_api_round_decimals"
path = "fuzz_targets/ft_api_round_decimals.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_api_ldexp"
path = "fuzz_targets/ft_api_ldexp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_api_pad_mode"
path = "fuzz_targets/ft_api_pad_mode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_index_select"
path = "fuzz_targets/ft_kernel_cpu_index_select.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_cumsum"
path = "fuzz_targets/ft_kernel_cpu_cumsum.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_where"
path = "fuzz_targets/ft_kernel_cpu_where.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_sort"
path = "fuzz_targets/ft_kernel_cpu_sort.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_topk"
path = "fuzz_targets/ft_kernel_cpu_topk.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_masked_fill"
path = "fuzz_targets/ft_kernel_cpu_masked_fill.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_masked_select"
path = "fuzz_targets/ft_kernel_cpu_masked_select.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_nonzero"
path = "fuzz_targets/ft_kernel_cpu_nonzero.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_cumprod"
path = "fuzz_targets/ft_kernel_cpu_cumprod.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_softmax"
path = "fuzz_targets/ft_kernel_cpu_softmax.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_scatter_add"
path = "fuzz_targets/ft_kernel_cpu_scatter_add.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_lerp"
path = "fuzz_targets/ft_kernel_cpu_lerp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_norm"
path = "fuzz_targets/ft_kernel_cpu_norm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_var"
path = "fuzz_targets/ft_kernel_cpu_var.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_matmul"
path = "fuzz_targets/ft_kernel_cpu_matmul.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_bmm"
path = "fuzz_targets/ft_kernel_cpu_bmm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_addmm"
path = "fuzz_targets/ft_kernel_cpu_addmm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_addmv"
path = "fuzz_targets/ft_kernel_cpu_addmv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_blas_small"
path = "fuzz_targets/ft_kernel_cpu_blas_small.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_cat_stack"
path = "fuzz_targets/ft_kernel_cpu_cat_stack.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_reductions"
path = "fuzz_targets/ft_kernel_cpu_reductions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_activations"
path = "fuzz_targets/ft_kernel_cpu_activations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_binary_math"
path = "fuzz_targets/ft_kernel_cpu_binary_math.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_argmax"
path = "fuzz_targets/ft_kernel_cpu_argmax.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_predicates"
path = "fuzz_targets/ft_kernel_cpu_predicates.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_index_put"
path = "fuzz_targets/ft_kernel_cpu_index_put.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_softmax_f32"
path = "fuzz_targets/ft_kernel_cpu_softmax_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_matmul_f32"
path = "fuzz_targets/ft_kernel_cpu_matmul_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_reductions_f32"
path = "fuzz_targets/ft_kernel_cpu_reductions_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_binary_elementwise"
path = "fuzz_targets/ft_kernel_cpu_binary_elementwise.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_misc_f32"
path = "fuzz_targets/ft_kernel_cpu_misc_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ft_kernel_cpu_inv"
path = "fuzz_targets/ft_kernel_cpu_inv.rs"
test = false
doc = false
bench = false

[workspace]
