[package]
name = "ft-api"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-autograd = { workspace = true }
ft-core = { workspace = true }
ft-dispatch = { workspace = true }
ft-kernel-cpu = { workspace = true }
ft-runtime = { workspace = true }
libm = { workspace = true }
mimalloc = { version = "0.1.52", optional = true }
rayon = "1.10"
wide = "0.7"

[features]
default = []
fair-alloc = ["dep:mimalloc"]

[dev-dependencies]
criterion = { workspace = true }
ft-core = { workspace = true }

[[bench]]
name = "ops_bench"
harness = false

[[bench]]
name = "special_bench"
harness = false

[[bench]]
name = "fft_bench"
harness = false

[[bench]]
name = "cdist_bench"
harness = false

[[bench]]
name = "pytorch_gauntlet_bench"
harness = false

[lints]
workspace = true
