[package]
name = "ft-autograd"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
ft-dispatch = { workspace = true }
ft-kernel-cpu = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
insta = "1.47.2"
proptest = "1.6.0"

[lints]
workspace = true
