[package]
name = "ft-conformance"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-api = { workspace = true }
ft-core = { workspace = true }
ft-autograd = { workspace = true }
ft-dispatch = { workspace = true }
ft-serialize = { workspace = true }
ft-runtime = { workspace = true }
ft-optim = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
