[package]
name = "ft-data"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
ft-api = { workspace = true }
ft-autograd = { workspace = true }
ft-dispatch = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "dataloader_bench"
harness = false

[[bench]]
name = "sampler_bench"
harness = false

[lints]
workspace = true
