[package]
name = "ft-dispatch"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
ft-kernel-cpu = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = "1.47.2"
proptest = "1.6.0"

[[bench]]
name = "dispatch_bench"
harness = false

[lints]
workspace = true
