[package]
name = "ft-kernel-cpu"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
libm = { workspace = true }
matrixmultiply = "0.3"
rayon = "1.10"
wide = "0.7"

[dev-dependencies]
insta = "1.47.2"
proptest = "1.6.0"
criterion = { workspace = true }

[[bench]]
name = "gemm_bench"
harness = false

[[bench]]
name = "winograd_bench"
harness = false

[[bench]]
name = "elementwise_bench"
harness = false

[[bench]]
name = "softmax_bench"
harness = false

[[bench]]
name = "linalg_bench"
harness = false

[[bench]]
name = "sort_bench"
harness = false

[[bench]]
name = "topk_bench"
harness = false

[lints]
workspace = true
