[package]
name = "ft-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
asupersync-integration = ["dep:asupersync"]
frankentui-integration = ["dep:ftui"]

[dependencies]
ft-core = { workspace = true }
asupersync = { workspace = true, optional = true }
ftui = { workspace = true, optional = true }

[dev-dependencies]
ft-serialize = { workspace = true }

[lints]
workspace = true
