[package]
name = "ft-runtime"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[features]
default = []
asupersync-integration = ["dep:asupersync"]
frankentui-integration = ["dep:ftui"]

[dependencies]
ft-core = { workspace = true }
asupersync = { workspace = true, optional = true }
ftui = { workspace = true, optional = true }

[dev-dependencies]
ft-serialize = { workspace = true }
insta = "1.43.1"

[lints]
workspace = true
