[package]
name = "ft-serialize"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["float_roundtrip"] }
asupersync = { workspace = true }

[dev-dependencies]
proptest = "1.6.0"

[lints]
workspace = true
