[package]
name = "ft-serialize"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["float_roundtrip"] }
asupersync = { workspace = true }
safetensors = { workspace = true }

[dev-dependencies]
insta = "1.47.2"
proptest = "1.6.0"

[lints]
workspace = true
