[package]
name = "ft-serialize"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["float_roundtrip"] }
asupersync = { workspace = true }
safetensors = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = "1.47.2"
proptest = "1.6.0"

[[bench]]
name = "serialize_bench"
harness = false

[lints]
workspace = true
